--- a/content/data/team/dianne-ameter.yaml
+++ b/content/data/team/dianne-ameter.yaml
@@ -1,7 +1,7 @@
 id: dianne-ameter
 link: blog/author/dianne-ameter
 first_name: Daniel
-last_name: Ameter
+last_name: Kaufman
 photo: images/dianne-ameter.jpg
 photo_alt: Dianne Ameter
 bio: >-
