--- a/content/data/config.json
+++ b/content/data/config.json
@@ -61,7 +61,8 @@
                 "style": "link",
                 "new_window": true
             }
-        ]
+        ],
+        "content": "4141 N Western Ave Chicago, IL 60618 Phone: 773-516-4100 Fax: 773-304-3185"
     },
     "domain": "https://super-moon-fff8d.netlify.app"
 }
