--- a/content/data/config.json
+++ b/content/data/config.json
@@ -50,6 +50,14 @@
                 "new_window": true
             },
             {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
+            },
+            {
                 "label": "LinkedIn",
                 "url": "https://www.linkedin.com/",
                 "style": "link",
