config.json: updated label in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -50,7 +50,7 @@
                 "new_window": true
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Facebook",
                 "url": "#",
                 "style": "link",
                 "new_window": false,
