config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -64,7 +64,7 @@
                 "new_window": true
             }
         ],
-        "content": "185 N Franklin St Chicago, IL 60606  Phone: 773-516-4100 Fax: 773-304-3185"
+        "content": "185 N Franklin St Chicago, IL 60606  Phone:  Fax: 773-304-3185"
     },
     "domain": "https://super-moon-fff8d.netlify.app"
 }
