config.json: updated logo in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -25,7 +25,8 @@
                 "url": "/contact",
                 "style": "primary"
             }
-        ]
+        ],
+        "logo": "/images/logo.svg"
     },
     "footer": {
         "has_nav": true,
